--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="BattleManager.js"></script>
   <script src="DialogManager.js"></script>
   <script src="Monster.js"></script>
+  <script src="Item.js"></script>
 </body>
 
 </html>
