Began work on AnimationManager

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="Menu.js"></script>
   <script src="BattleManager.js"></script>
   <script src="DialogManager.js"></script>
+  <script src="AnimationManager.js"></script>
   <script src="Monster.js"></script>
   <script src="Item.js"></script>
 </body>
