Added title screen

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="AnimationManager.js"></script>
   <script src="Monster.js"></script>
   <script src="Item.js"></script>
+  <script src="TitleMenu.js"></script>
 </body>
 
 </html>
