--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <div class="content"></div>
+
   <script src="sketch.js"></script>
   <script src="Entity.js"></script>
   <script src="Creature.js"></script>
@@ -29,6 +31,8 @@
   <script src="Monster.js"></script>
   <script src="Item.js"></script>
   <script src="TitleMenu.js"></script>
+
+  </div>
 </body>
 
 </html>
